--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^0.18.4+1
   cloud_firestore: ^0.14.4
   modal_progress_hud: ^0.1.3
+  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
